fix: z-index of the hamburger menu

--- a/src/scss/base/globals.scss
+++ b/src/scss/base/globals.scss
@@ -11,7 +11,7 @@ html{
     box-sizing: inherit;
 }
 body{
-    background-color: $lightGray;
+    background-color: $white;
     overflow-x: hidden;
 }
 h1,h2,h3,h4{
