--- a/src/scss/layout/header/hamburgerMenu.scss
+++ b/src/scss/layout/header/hamburgerMenu.scss
@@ -5,6 +5,8 @@
     position: absolute;
     border: 2px solid $borderGray;
     padding: 1rem;
+    z-index: 300;
+    background-color: $white;
     top: 3rem;
     right: 0;
     display: flex;
